ADD_SUBDIRECTORY("CPP")
ADD_SUBDIRECTORY("Fortran/Winteracter")

# Install images, models, etc
INSTALL(
  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Images
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  )

INSTALL(
  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Models
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  )

INSTALL(
  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Shaders
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  )

INSTALL(
  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Stars
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  )

INSTALL(
  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/osgEarth
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  )